--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 </head>
 <body>
 
-    <h1>Aperte a tecla</h1>
+    <h1>Escolha o som desejado</h1>
 
     <section class="teclado">
         <div class="teclado-container">
             <button class="tecla tecla_pom">Pom</button>
             <button class="tecla tecla_clap">Clap</button>
             <button class="tecla tecla_tim">Tim</button>
-            
+
             <button class="tecla tecla_puff">Puff</button>
             <button class="tecla tecla_splash">Splash</button>
             <button class="tecla tecla_toim">Toim</button>
-            
+
             <button class="tecla tecla_psh">Psh</button>
             <button class="tecla tecla_tic">Tic</button>
             <button class="tecla tecla_tom">Tom</button>
